src-errormsg/E25-InfiniteType/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E25-InfiniteType/Plinth.hs:22:52: error: [GHC-83865]
    • Couldn't match expected type ‘List a0’ with actual type ‘Integer’
    • In the third argument of ‘foldList’, namely ‘x’
      In the first argument of ‘(+)’, namely
        ‘foldList (\ acc _ -> acc) 0 x’
      In the expression: foldList (\ acc _ -> acc) 0 x + badFold rest
   |
22 | badFold (Cons x rest) = foldList (\acc _ -> acc) 0 x + badFold rest
   |                                                    ^
